--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Antavo\\LoyaltySdk\\": "src/"
+            "Antavo\\Loyalty\\Sdk\\": "src/"
         }
     }
 }
