--- a/composer.json
+++ b/composer.json
@@ -14,18 +14,12 @@
     "require": {
         "php": ">=5.5",
         "emartech/escher": "^0.2.13",
-        "antavo/rest-client-php": "*@dev",
+        "pakard/rest-client-php": "^1.0",
         "antavo/signed-token": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8"
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://composer:FtVR8G52gJ@gitlab.antavo.com/antavo/rest-client-php.git"
-        }
-    ],
     "autoload": {
         "psr-4": {
             "Antavo\\Loyalty\\Sdk\\": "src/"
