Upgrading composer.json: using Antavo's Escher repository

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     },
     "require": {
         "php": ">=5.5",
-        "emartech/escher": "^0.2.13",
+        "antavo/escher-php": "^0.2.13",
         "pakard/rest-client-php": "^1.0",
         "antavo/signed-token": "^1.0"
     },
